Removed some comments in java benches