@@ -3,15 +3,6 @@ import java.lang.invoke.MethodHandle;
 
 import java.math.BigInteger;
 
-// OLD:
-// java --enable-native-access=ALL-UNNAMED --enable-preview --source 21 .\benchmarks\fibjava\Bench.java 10 10
-
-// Testing with Java library path:
-// java -Djava.library.path=./target/release --enable-native-access=ALL-UNNAMED --enable-preview --source 21 ./benchmarks/FibSequence/fibjava/Bench.java 10 10
-
-// Latest working version:
-// java --enable-native-access=ALL-UNNAMED --enable-preview --source 21 ./benchmarks/FibSequence/fibjava/Bench.java 10 10
-
 class Bench {
     public static void main(String[] args) {
 
@@ -45,17 +36,6 @@ class Bench {
         int n = Integer.parseInt(args[0]);
         int loop_count = Integer.parseInt(args[1]);
 
-        /*
-        // works without arena as seen below, but not sure if it is correct to do so
-        // the code is commented out here in case it is needed later
-
-        try (Arena arena = Arena.ofConfined()) {
-            start_rapl.invoke();
-        } catch (Throwable e) {
-            e.printStackTrace();
-        }
-        */
-
         // Running benchmark
         // Note that this could potentially be optimized away
         // by the compiler due to the fact that the result is not used.
@@ -75,15 +55,7 @@ class Bench {
             }
             System.out.println(result);
         }
-        System.out.println("Java job done");
-
-        /*
-        try (Arena arena = Arena.ofConfined()) {
-            stop_rapl.invoke();
-        } catch (Throwable e) {
-            e.printStackTrace();
-        }
-        */
+        System.out.println("Java job done ");
     }
 
     // Test method
