@@ -6,15 +6,6 @@ import java.util.*;
 import java.util.stream.Stream;
 import java.util.stream.Collectors;
 
-// OLD:
-// java --enable-native-access=ALL-UNNAMED --enable-preview --source 21 .\benchmarks\fibjava\Bench.java 10 10
-
-// Testing with Java library path:
-// java -Djava.library.path=./target/release --enable-native-access=ALL-UNNAMED --enable-preview --source 21 ./benchmarks/FibSequence/fibjava/Bench.java 10 10
-
-// Latest working version:
-// java --enable-native-access=ALL-UNNAMED --enable-preview --source 21 ./benchmarks/FibSequence/fibjava/Bench.java 10 10
-
 class Bench {
     public static void main(String[] args) {
 
@@ -50,17 +41,6 @@ class Bench {
         List<Long> mergeParam = Arrays.stream(data).map(String::trim).map(Long::valueOf).toList();
         int loop_count = Integer.parseInt(args[1]);
 
-        /*
-        // works without arena as seen below, but not sure if it is correct to do so
-        // the code is commented out here in case it is needed later
-
-        try (Arena arena = Arena.ofConfined()) {
-            start_rapl.invoke();
-        } catch (Throwable e) {
-            e.printStackTrace();
-        }
-        */
-
         // Running benchmark
         // Note that this could potentially be optimized away
         // by the compiler due to the fact that the result is not used.
@@ -83,13 +63,6 @@ class Bench {
         }
         System.out.println("Java job done");
 
-        /*
-        try (Arena arena = Arena.ofConfined()) {
-            stop_rapl.invoke();
-        } catch (Throwable e) {
-            e.printStackTrace();
-        }
-        */
     }
 
     // Test class (implementation was a class in rosetta)
